fix: 🐛 fix frontend UI

--- a/packages/frontend/src/App.module.scss
+++ b/packages/frontend/src/App.module.scss
@@ -3,5 +3,6 @@
 }
 
 .content-background {
-  background-color: #88a0bb;
+  background-color: #d8e0e9;
+  background-image: url("/LogoMakr-3XPkOo.png") ;
 }
