--- a/packages/frontend/src/Component/AppHeader/AppHeader.module.scss
+++ b/packages/frontend/src/Component/AppHeader/AppHeader.module.scss
@@ -8,6 +8,9 @@
       margin-right: 30px;
     }
   } */
+  .icon{
+    height: 50px;
+  }
   .monitor-div {
     .monitor {
       cursor: pointer;
